--- a/hosting/uptimeKuma/.env.example
+++ b/hosting/uptimeKuma/.env.example
@@ -1,4 +1,6 @@
 # Uptime-Kuma
-KUMA_ADMIN_USERNAME=admin
-KUMA_ADMIN_PASSWORD=your_secure_password
-KUMTA_BOT_TOKEN=your_telegram_bot_token
+KUMA_ADMIN_USERNAME=EXIST_DEFAULT_USERNAME
+KUMA_ADMIN_PASSWORD=EXIST_24_CHAR_PASSWORD
+# KUMTA_BOT_TOKEN=your_telegram_bot_token
+
+# TODO: use NTFY for notifications
