Share the redis poassword between services

--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,5 @@ EXIST_DEFAULT_DOCKER_NETWORK_SUBNET=10.0.0.0/24
 # TrueNAS NFS Settings (required for persistent storage)
 EXIST_DEFAULT_TRUENAS_SERVER_ADDRESS=EXIST_CLI
 EXIST_DEFAULT_TRUENAS_CONTAINER_PATH=EXIST_CLI
+
+EXIST_DEFAULT_REDIS_PASSWORD=EXIST_24_CHAR_PASSWORD
