--- a/hosting/portainer/.env.example
+++ b/hosting/portainer/.env.example
@@ -1,3 +1,5 @@
 # TrueNAS NFS
 TRUENAS_SERVER_ADDRESS=EXIST_DEFAULT_TRUENAS_SERVER_ADDRESS
 TRUENAS_CONTAINER_PATH=EXIST_DEFAULT_TRUENAS_CONTAINER_PATH
+
+PORTAINER_ADMIN_PASSWORD=EXIST_DEFAULT_PASSWORD
