Include network in docker-compose

--- a/hosting/portainer/.env.example
+++ b/hosting/portainer/.env.example
@@ -2,4 +2,5 @@
 TRUENAS_SERVER_ADDRESS=EXIST_DEFAULT_TRUENAS_SERVER_ADDRESS
 TRUENAS_CONTAINER_PATH=EXIST_DEFAULT_TRUENAS_CONTAINER_PATH
 
+# PORTAINER
 PORTAINER_ADMIN_PASSWORD=EXIST_DEFAULT_PASSWORD
