--- a/graveyard/dockerSwarm/.env.example
+++ b/graveyard/dockerSwarm/.env.example
@@ -3,4 +3,4 @@ TRUENAS_SERVER_ADDRESS=EXIST_DEFAULT_TRUENAS_SERVER_ADDRESS
 TRUENAS_CONTAINER_PATH=EXIST_DEFAULT_TRUENAS_CONTAINER_PATH
 
 # Join the swarm
-# docker swarm join --token smthng 10.0.0.10:2377
+# docker swarm join --token smthng localhost:2377
