--- a/nas/minIO/.env.example
+++ b/nas/minIO/.env.example
@@ -5,13 +5,13 @@ TRUENAS_PATH=/mnt/something/minio
 # RabbitMQ
 RABBITMQ_USERNAME=EXIST_DEFAULT_USERNAME
 RABBITMQ_PASSWORD=EXIST_24_CHAR_PASSWORD
-RABBITMQ_BROKER=tcp://10.0.0.100:1883
+RABBITMQ_BROKER=tcp://localhost0:1883
 
 # Minio
 MINIO_ROOT_USER=EXIST_DEFAULT_USERNAME
-MINIO_ROOT_PASSWORD=EXIST_24_CHAR_PASSWORD
+MINIO_ROOT_PASSWORD=EXIST_DEFAULT_PASSWORD
 MINIO_DOMAIN=minio.example.com
 MINIO_SERVER_URL=https://minio.example.com
 
-# MINIO_DOMAIN=10.0.0.10
-# MINIO_SERVER_URL=http://10.0.0.10:9000
+# MINIO_DOMAIN=localhost
+# MINIO_SERVER_URL=http://localhost:9000
