--- a/nas/nextcloud/.env.example
+++ b/nas/nextcloud/.env.example
@@ -6,8 +6,9 @@ TRUENAS_CONTAINER_PATH=EXIST_DEFAULT_TRUENAS_CONTAINER_PATH
 REDIS_PASSWORD=EXIST_DEFAULT_REDIS_PASSWORD
 
 # Nextcloud
-TRUSTED_PROXIES=10.0.0.0/12 # Needs to cover the IP address of the reverse proxy (Caddy)
-NEXTCLOUD_DOMAIN=nextcloud.example.com
+TRUSTED_PROXIES=localhost:8421 # Needs to cover the IP address of the reverse proxy (Caddy)
+NEXTCLOUD_DOMAIN=localhost:8421
+NEXTCLOUD_PROTOCOL=http
 NEXTCLOUD_ADMIN_USER=EXIST_DEFAULT_USERNAME
 NEXTCLOUD_ADMIN_PASSWORD=EXIST_24_CHAR_PASSWORD
 NEXTCLOUD_SQL_PASSWORD=EXIST_24_CHAR_PASSWORD
