--- a/services/nocoDB/docker-compose.yml
+++ b/services/nocoDB/docker-compose.yml
@@ -1,11 +1,11 @@
-services: 
-  nocodb_postgres: 
+services:
+  nocodb_postgres:
     container_name: nocodb_postgres
     image: postgres:16.6
     restart: unless-stopped
     networks:
       - exist
-    environment: 
+    environment:
       POSTGRES_DB: nocodb_postgres
       POSTGRES_PASSWORD: ${NOCODB_POSTGRES_PASSWORD}
       POSTGRES_USER: ${NOCODB_POSTGRES_USER}
@@ -15,26 +15,26 @@ services:
     healthcheck:
       interval: 10s
       retries: 10
-      test: "pg_isready -U \"$$POSTGRES_USER\" -d \"$$POSTGRES_DB\""
+      test: 'pg_isready -U "$$POSTGRES_USER" -d "$$POSTGRES_DB"'
       timeout: 2s
 
   # UI interface at http://localhost:11580/
-  nocodb: 
+  nocodb:
     container_name: nocodb
     image: "nocodb/nocodb:latest"
     restart: unless-stopped
     networks:
       - exist
-    depends_on: 
-      nocodb_postgres: 
+    depends_on:
+      nocodb_postgres:
         condition: service_healthy
-    environment: 
+    environment:
       NC_DB: "pg://nocodb_postgres:5432?u=${NOCODB_POSTGRES_USER}&p=${NOCODB_POSTGRES_PASSWORD}&d=nocodb_postgres"
       NC_ADMIN_EMAIL: ${NOCODB_ADMIN_EMAIL}
       NC_ADMIN_PASSWORD: ${NOCODB_ADMIN_PASSWORD}
-    ports: 
-      - "11580:8080"
-    volumes: 
+    ports:
+      - 11580:8080
+    volumes:
       - nocodb_data:/usr/app/data
       # - ./nc_data:/usr/app/data # Local volume for NocoDB data
 
