Expand setup scripts

--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,9 @@
 
 **/node_modules
 
-docker-compose.yml
-docker-compose.diff.yml
-docker-compose.generated.yml
+/docker-compose.yml
+/docker-compose.diff.yml
+/docker-compose.generated.yml
 
 # Bridge Config
 **/bridge.config.json
@@ -53,8 +53,19 @@ docker-compose.generated.yml
 **/ntfy-config/user.db
 **/mqtfy-config.yml
 
+# Playwright
+node_modules/
+/automations/playwright/test-results/
+/automations/playwright/playwright-report/
+/automations/playwright/blob-report/
+/automations/playwright/playwright/.cache/
+
+# Portainer
+**/portainer/portainer_password*
+
 # RabbitMQ
 **/ssl/ca.pem
+**/ssl/client*
 **/ssl/server_cert.pem
 **/ssl/server_key.pem
 **/rabbitMQ/defs.json
