--- a/ai/ollama/docker-compose.yml
+++ b/ai/ollama/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     networks:
       - exist
     ports:
-      - "11434:11434" # Ollama's default API port
+      - 11434:11434 # Ollama's default API port
     # runtime: nvidia ## NVIDIA GPU required obviously
     # environment:
     #   - NVIDIA_VISIBLE_DEVICES=all
