--- a/hosting/portainer/.env.example
+++ b/hosting/portainer/.env.example
@@ -3,4 +3,4 @@ TRUENAS_SERVER_ADDRESS=EXIST_DEFAULT_TRUENAS_SERVER_ADDRESS
 TRUENAS_CONTAINER_PATH=EXIST_DEFAULT_TRUENAS_CONTAINER_PATH
 
 # PORTAINER
-PORTAINER_ADMIN_PASSWORD=EXIST_DEFAULT_PASSWORD
+# uses the exist default password for the admin user
