--- a/nas/redis/docker-compose.yml
+++ b/nas/redis/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - /bin/sh
       - -c
       - redis-server --requirepass ${REDIS_PASSWORD}
-    ports:
-      - "6379:6379"
+    # ports:
+    #   - "6379:6379"
     volumes:
       - ./redis_data:/data
 
