--- a/services/ntfy/docker-compose.yml
+++ b/services/ntfy/docker-compose.yml
@@ -6,20 +6,24 @@ services:
     networks:
       - exist
     ports:
-      - 36880:80
+      - 44680:80
     command:
       - serve
     environment:
-      - TZ=${NTFY_TZ}    # optional: set desired timezone
+      - TZ=${NTFY_TZ} # optional: set desired timezone
     volumes:
       - ntfy_cache:/var/lib/ntfy
       - ./ntfy-config:/etc/ntfy:ro
     healthcheck: # optional: remember to adapt the host:port to your environment
-        test: ["CMD-SHELL", "wget -q --tries=1 http://localhost:80/v1/health -O - | grep -Eo '\"healthy\"\\s*:\\s*true' || exit 1"]
-        interval: 60s
-        timeout: 10s
-        retries: 3
-        start_period: 40s
+      test:
+        [
+          "CMD-SHELL",
+          "wget -q --tries=1 http://localhost:80/v1/health -O - | grep -Eo '\"healthy\"\\s*:\\s*true' || exit 1",
+        ]
+      interval: 60s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
 volumes:
   ntfy_cache:
