Setup caddy for local development

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,11 @@ EXIST_ENABLE_AI_LIBRECHAT=true
 EXIST_ENABLE_AI_OLLAMA=true
 EXIST_ENABLE_AI_WHISPER=true
 
+# Automation Services
+EXIST_ENABLE_AUTOMATIONS_PLAYWRIGHT=true
+
 # Hosting Services
-EXIST_ENABLE_HOSTING_CADDY=false
+EXIST_ENABLE_HOSTING_CADDY=true
 EXIST_ENABLE_HOSTING_PORTAINER=true
 EXIST_ENABLE_HOSTING_UPTIMEKUMA=false
 
