--- a/hosting/caddy/Caddyfile.example
+++ b/hosting/caddy/Caddyfile.example
@@ -1,42 +1,102 @@
-nextcloud.example.com {
-  tls /etc/caddy/certs/cloudflare.pem /etc/caddy/certs/cloudflare-key.pem
+# Local development with real domain and self-signed SSL certificates
+# Since these domains point to 127.0.0.1, Let's Encrypt cannot validate them
+# Using self-signed certificates instead
+
+# Global options
+{
+  # Use internal CA for self-signed certificates
+  auto_https disable_redirects
+}
+
+# Main dashboard
+local.existential.company {
+  tls internal
+  reverse_proxy dashy:8080
+}
+
+# Nextcloud - gets its own clean subdomain
+cloud.local.existential.company {
+  tls internal
   redir /.well-known/carddav /remote.php/dav/ 301
   redir /.well-known/caldav /remote.php/dav/ 301
-
-  # the mapped port in caddy should be to the port on the container
-  # not the port mapped to the host.
-  # EG: a container with ports: "8421:80" would point to :80 in the Caddyfile
   reverse_proxy nextcloud:80
 }
 
-tasks.example.com {
-  tls /etc/caddy/certs/cloudflare.pem /etc/caddy/certs/cloudflare-key.pem
-  
-  reverse_proxy tasks:80
+# Docker management
+portainer.local.existential.company {
+  tls internal
+  reverse_proxy portainer:9000
 }
 
-nocodb.example.com {
-  tls /etc/caddy/certs/cloudflare.pem /etc/caddy/certs/cloudflare-key.pem
-  
-  reverse_proxy nocodb:8080
+# Task management
+tasks.local.existential.company {
+  tls internal
+  reverse_proxy vikunja:80
 }
 
-it.example.com {
-  tls /etc/caddy/certs/cloudflare.pem /etc/caddy/certs/cloudflare-key.pem
-  
+# Workflow automation
+windmill.local.existential.company {
+  tls internal
+  reverse_proxy windmill_server:8000
+}
+
+# IT Tools
+tools.local.existential.company {
+  tls internal
   reverse_proxy it-tools:80
 }
 
-minio.example.com {
-  tls /etc/caddy/certs/cloudflare.pem /etc/caddy/certs/cloudflare-key.pem
-  
+# Database interface
+db.local.existential.company {
+  tls internal
+  reverse_proxy nocodb:8080
+}
+
+# Object storage
+storage.local.existential.company {
+  tls internal
   reverse_proxy minio:9000
 }
 
-app.example.com {
-  tls /etc/caddy/certs/cloudflare.pem /etc/caddy/certs/cloudflare-key.pem
-  
-  reverse_proxy appsmith:443
+# Low-code platform
+apps.local.existential.company {
+  tls internal
+  reverse_proxy appsmith:80
+}
+
+# Message queue management
+queue.local.existential.company {
+  tls internal
+  reverse_proxy rabbitmq:15672
+}
+
+# Notifications
+notify.local.existential.company {
+  tls internal
+  reverse_proxy ntfy:80
+}
+
+# Recipe management
+recipes.local.existential.company {
+  tls internal
+  reverse_proxy mealie:9000
+}
+
+# Monitoring
+monitor.local.existential.company {
+  tls internal
+  reverse_proxy uptime-kuma:3001
+}
+
+# Alternative low-code platform
+build.local.existential.company {
+  tls internal
+  reverse_proxy lowcoder-frontend:3000
+}
+
+# RabbitMQ Management at localhost/rabbitmq
+localhost/rabbitmq* {
+  reverse_proxy rabbitmq:15672
 }
 
 
