Add server maintenance page to caddy

--- a/.env.example
+++ b/.env.example
@@ -57,4 +57,12 @@ EXIST_DEFAULT_DOCKER_NETWORK_SUBNET=10.0.0.0/24
 EXIST_DEFAULT_TRUENAS_SERVER_ADDRESS=EXIST_CLI
 EXIST_DEFAULT_TRUENAS_CONTAINER_PATH=EXIST_CLI
 
+# EG: storage.local.existential.company
+EXIST_MINIO_DOMAIN=EXIST_CLI
+# EG: https://storage.local.existential.company
+EXIST_MINIO_SERVER_URL=EXIST_CLI
+
+# EG: https://cloud.local.existential.company
+EXIST_NEXTCLOUD_DOMAIN=EXIST_CLI
+
 EXIST_DEFAULT_REDIS_PASSWORD=EXIST_24_CHAR_PASSWORD
