--- a/nas/minIO/.env.example
+++ b/nas/minIO/.env.example
@@ -10,8 +10,8 @@ RABBITMQ_BROKER=tcp://localhost0:1883
 # Minio
 MINIO_ROOT_USER=EXIST_DEFAULT_USERNAME
 MINIO_ROOT_PASSWORD=EXIST_DEFAULT_PASSWORD
-MINIO_DOMAIN=minio.example.com
-MINIO_SERVER_URL=https://minio.example.com
+MINIO_DOMAIN=EXIST_MINIO_DOMAIN
+MINIO_SERVER_URL=EXIST_MINIO_SERVER_URL
 
 # MINIO_DOMAIN=localhost
 # MINIO_SERVER_URL=http://localhost:9000
