--- a/nas/nextcloud/.env.example
+++ b/nas/nextcloud/.env.example
@@ -7,7 +7,7 @@ REDIS_PASSWORD=EXIST_DEFAULT_REDIS_PASSWORD
 
 # Nextcloud
 TRUSTED_PROXIES=caddy # Needs to cover the IP address of the reverse proxy (Caddy)
-NEXTCLOUD_DOMAIN=cloud.local.existential.company
+NEXTCLOUD_DOMAIN=EXIST_NEXTCLOUD_DOMAIN
 NEXTCLOUD_PROTOCOL=https
 NEXTCLOUD_ADMIN_USER=EXIST_DEFAULT_USERNAME
 NEXTCLOUD_ADMIN_PASSWORD=EXIST_24_CHAR_PASSWORD
