Add actual budget

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,7 @@ EXIST_ENABLE_NAS_ONLYOFFICE=true
 EXIST_ENABLE_NAS_REDIS=true
 
 # Application Services
+EXIST_ENABLE_SERVICES_ACTUALBUDGET=false
 EXIST_ENABLE_SERVICES_APPSMITH=false
 EXIST_ENABLE_SERVICES_DASHY=true
 EXIST_ENABLE_SERVICES_ITTOOLS=false
